--- a/style.css
+++ b/style.css
@@ -3,49 +3,91 @@
     src: url('./font/Hero-Regular.ttf');
     font-style: normal;
      font-weight: 400;
+
 }
 
-.body{
-height: 100vh;
-font-family: 'Hero';
-display: flex;
+
+
 body{
-    height: 100vh;
-    font-family: 'Hero';
+font-family: 'Hero';
+width:100%;
+height: 100%;
+margin: 0;
 }
 
 
-.logo{
+.Logo{
     color:#F9FAF8;
-    padding-left: 8px;
+    font-size: 24px;
 }
 
-.a{
-    display: flex;
-    justify-content: flex-end;
-
-
+a{
     color:#E5E7EB;
-
-}
+    text-decoration: none;
+    padding:8px;  
+}  
 
 .header{
-    display: flex;
     background-color: #1F2937;
     color: #F9FAF8;
-}
-
-.HeaderContent{
     display: flex;
+    flex-direction: column;
 }
 
-.HeaderLeft{
+.headerTop{
     display: flex;
-
+    justify-content: space-around;
+    margin-left: 90px;
+    margin-right: 90px;
+    margin-top: 16px;
+    flex-shrink: 0;
 }
 
-.img{
+.Main{
+    font-size: 48px;
+    font-weight: 700;
+    margin-bottom: -45px;
+}
+
+
+
+button{
+    background-color: #3882F6; 
+    border: none;
+    color: white;
+    padding: 8px 24px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 8px;
+}
+
+img{
+    display: block;
+    height: 300px;
+    width: auto;
+    padding: 80px;
+    flex-shrink: 0;
+    margin-right:300px;
+}
+
+
+.headerContent{
     display: flex;
+    justify-content: space-around;
+    gap: 30px;
 }
 
+.headerLeft{
+    flex-wrap: wrap;
+    width: 50%;
+    margin-left: 300px;
+    padding: 80px;
+}
 
+span,
+.p{
+    font-size: 18px;
+    margin-bottom: -10px;
+}
